[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/menu/New Game.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/menu/Load Game.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/menu/Back.png" type="Texture" id=3]
[ext_resource path="res://scripts/Play_menu.gd" type="Script" id=4]

[node name="PlayMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="CanvasLayer/Panel"]
margin_left = 355.54
margin_top = 182.108
margin_right = 709.54
margin_bottom = 236.108
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/NewGame"]
position = Vector2( 179.559, 27.4283 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
vframes = 3

[node name="LoadGame" type="TextureButton" parent="CanvasLayer/Panel"]
margin_left = 337.537
margin_top = 293.866
margin_right = 730.537
margin_bottom = 352.866
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/LoadGame"]
position = Vector2( 196.816, 28.3027 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 3

[node name="Back" type="TextureButton" parent="CanvasLayer/Panel"]
margin_left = 459.228
margin_top = 409.796
margin_right = 596.228
margin_bottom = 450.796
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/Back"]
position = Vector2( 65.5345, 15.9875 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 3
[connection signal="button_down" from="CanvasLayer/Panel/NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="mouse_entered" from="CanvasLayer/Panel/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Panel/NewGame" to="." method="_on_NewGame_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Panel/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="button_down" from="CanvasLayer/Panel/LoadGame" to="." method="_on_LoadGame_button_down"]
[connection signal="mouse_entered" from="CanvasLayer/Panel/LoadGame" to="." method="_on_LoadGame_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Panel/LoadGame" to="." method="_on_LoadGame_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Panel/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="button_down" from="CanvasLayer/Panel/Back" to="." method="_on_Back_button_down"]
[connection signal="mouse_entered" from="CanvasLayer/Panel/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Panel/Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Panel/Back" to="." method="_on_Back_pressed"]
